Criando as tabelas e telas de funcionario por cargo, funcionario, cargo

--- a/EADs/EAD-ConsumindoApiViaCep/EAD-Parte2/src/main/resources/static/assets/css/style.css
+++ b/EADs/EAD-ConsumindoApiViaCep/EAD-Parte2/src/main/resources/static/assets/css/style.css
@@ -3,6 +3,12 @@ body {
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      padding-top: 70px;
+    }
+
+    h2{
+      color: white;
+      -webkit-text-stroke: black 0.7px;
     }
 
     .card {
